<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.geekband.alpha.renderscript.SampleRecognizer">


    <Button android:id="@+id/btn_recordref"
        android:text="@string/btn_txt_recordref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/btn_record"
        android:text="@string/btn_txt_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_recordref" />

    <TextView android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_record"
        android:textSize="20sp"
        android:text="@string/text_idle"
        />

    <Button android:id="@+id/btn_stop"
        android:text="@string/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_status"
        android:visibility="invisible" />

    <SeekBar android:id="@+id/sb_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_stop"
        android:max="1000"
        android:progress="600"/>

    <TextView android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sb_distance"
        android:textSize="20sp"
        android:text="@string/text_na"
        />


</RelativeLayout>
